# Derby-Graphics-CW-Student-100774097

./: BUILD_INSTRUCTIONS.txt  CMakeLists.txt  README.md  build_release.bat  readme.txt  run.bat
CharacterAnimation/: CAMERA_CONTROLS.md  CMakeLists.txt  README.txt
CharacterAnimation/src/: Camera.h  Mesh.cpp  animation.h  animator.h  bone.h  main.cpp
CharacterAnimationAndPhysSimulation/shaders/: bone.vert
CharacterAnimationAndPhysSimulation/src/: Mesh.cpp  Mesh.h  bone.h
RAYTRACER/: CMakeLists.txt  readme.txt
RAYTRACER/build_release/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake
RAYTRACER/src/: aabb.h  bvh.h  camera.h  hittable_list.h  image_utils.h  material.h  ray.h  rtweekend.h  tile_renderer.h  tile_statistics.h  vec3.h
RigidObjectCollision/: CMakeLists.txt  README.txt
RigidObjectCollision/shaders/: texblinn.frag
RigidObjectCollision/src/: AppMain.h  ArcballCamera.h  GLWin.cpp  GLWin.h  Grid.h  Interaction.cpp  Interaction.h  Material.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  Node.cpp  Node.h  Octree.h  PlaneMesh.cpp  PlaneMesh.h  RigidBody.cpp  RigidBody.h  RigidPlane.h  RigidSim.cpp  RigidSim.h  RigidSphere.cpp  RigidSphere.h  Spatial.cpp  Spatial.h  SphereMesh.cpp  SphereMesh.h  Texture.cpp  Texture.h  main.cpp
build_release/: CMakeCache.txt
src/: camera.h  color.h  hittable.h  interval.h  main.cpp  png_converter.h  quad.h  sphere.h  texture.h
